base/deployment-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notafilia-beat
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: notafilia
      app.kubernetes.io/component: beat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notafilia
        app.kubernetes.io/component: beat
    spec:
      containers:
        - name: beat
          image: ghcr.io/rafafuentes4/notafilia:latest
          command:
            - celery
            - -A
            - notafilia
            - beat
            - -l
            - INFO
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
