base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: notafilia-web
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: notafilia
    app.kubernetes.io/component: web
